--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "author": "xdGuy",
   "dependencies": {
-    "@heroku/socksv5": "0.0.9"
+    "@heroku/socksv5": "0.0.9",
+    "express": "4.16.3",
+    "socket.io": "2.1.0"
   },
   "engines": {
     "node": "8.11.1",
