--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "xdGuy",
   "dependencies": {
     "@heroku/socksv5": "0.0.9",
-    "socket.io": "2.1.0"
+    "express": "^4.16.3",
+    "ws": "^5.1.1"
   },
   "engines": {
     "node": "8.11.1",
