--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "author": "xdGuy",
   "dependencies": {
-    "@heroku/socksv5": "0.0.9",
-    "express": "^4.16.3",
-    "ws": "^5.1.1"
+    "@heroku/socksv5": "0.0.9"
   },
   "engines": {
     "node": "8.11.1",
